--- a/package.json
+++ b/package.json
@@ -9,25 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cashfreepayments/cashfree-js": "^1.0.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "axios": "^1.7.7",
+    "cashfree-pg": "^4.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "csv-parser": "^3.0.0",
     "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
+    "formidable": "^3.5.2",
+    "framer-motion": "^11.11.9",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.10",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
@@ -35,6 +56,7 @@
     "postcss": "^8",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^10.0.0"
   }
 }
