--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@next/next/no-assign-module-variable": "off"
+    "@next/next/no-assign-module-variable": "off",
+    "@typescript-eslint/no-require-imports": "off"
   }
 }
