--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# development
+/src/app/admin/colleges/upload/page.tsx
+
 # dependencies
 /node_modules
 /.pnp
