production and staging key setup

--- a/apphosting.staging.yaml
+++ b/apphosting.staging.yaml
@@ -22,12 +22,12 @@ env:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_CASHFREE_API_KEY
-    secret: cashfreeApiKey
+    secret: stagingCashfreeApiKey
     availability:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_CASHFREE_SECRET_KEY
-    secret: cashfreeSecretKey
+    secret: stagingCashfreeSecretKey
     availability:
       - BUILD
       - RUNTIME
@@ -47,22 +47,22 @@ env:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    secret: firebaseApiKey
+    secret: stagingFirebaseApiKey
     availability:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-    secret: firebaseMessagingSenderId
+    secret: stagingFirebaseMessagingSenderId
     availability:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-    secret: firebaseAppId
+    secret: stagingFirebaseAppId
     availability:
       - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID
-    secret: firebaseMeasurementId
+    secret: stagingFirebaseMeasurementId
     availability:
       - BUILD
       - RUNTIME
