--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "csv-parser": "^3.0.0",
+    "date-fns": "^3.6.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
     "formidable": "^3.5.2",
@@ -37,6 +38,7 @@
     "next": "14.2.15",
     "papaparse": "^5.4.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
     "react-firebase-hooks": "^5.1.1",
