--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
@@ -21,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "cashfree-pg": "^4.2.3",
     "class-variance-authority": "^0.7.0",
