--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -45,6 +46,7 @@
     "react-dropzone": "^14.2.10",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.53.1",
+    "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
